# moltbook_vs_reddit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: index.html  report_havelock.html  report_havelock.json
paper/: .gitignore  README.md  main.tex  refs.bib
paper/figures/: duplicate_breakdown.tex  key_metrics.tex  pipeline.tex  topic_coverage_curve.tex
paper/tables/: signature_coverage_buckets.tex  top_topic_signatures.tex
src/moltbook_analysis/: __init__.py  cli.py  db.py  havelock_client.py  http_client.py  ingest_moltbook.py  ingest_reddit.py  metrics.py  orality.py  render_html.py  run_analysis.py
tests/: test_havelock_client.py  test_metrics.py  test_render_html.py
